--- a/style.css
+++ b/style.css
@@ -157,10 +157,17 @@ i {
 .dice {
   position: absolute;
   left: 50%;
-  top: 178px;
   transform: translateX(-50%);
   height: 100px;
   box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.1);
+}
+
+#dice-1 {
+  top: 125px;
+}
+
+#dice-2 {
+  top: 250px;
 }
 
 .winner {
